// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en SearchScreen debe coincidir con el snapshot con valores por defecto 1`] = `
<div
  className="row"
>
  <div
    className="col-5 animate__animated animate__fadeInFast"
  >
    <h4>
      Search Form
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your hero"
        type="text"
        value=""
      />
      <button
        className="btn btn-block btn-outline-primary mt-3"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="col-7 animate__animated animate__fadeInRight"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-info"
    >
      Search a hero
    </div>
  </div>
</div>
`;

exports[`Pruebas en SearchScreen debe mostrar un error si no se encuentra el hero 1`] = `
<div
  className="row"
>
  <div
    className="col-5 animate__animated animate__fadeInFast"
  >
    <h4>
      Search Form
    </h4>
    <hr />
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        className="form-control"
        name="searchText"
        onChange={[Function]}
        placeholder="Find your hero"
        type="text"
        value="1jk23gb4kj123h4gv"
      />
      <button
        className="btn btn-block btn-outline-primary mt-3"
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="col-7 animate__animated animate__fadeInRight"
  >
    <h4>
      Results
    </h4>
    <hr />
    <div
      className="alert alert-warning"
    >
      Hero 
      <b>
        1jk23gb4kj123h4gv
      </b>
       was not found
    </div>
  </div>
</div>
`;
